# family-calendar-reminder

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
frontend/pages/: index.html
migrations/: 0001_init.sql
nl-calendar-reminder-mvp/src/: App.tsx  styles.css
nl-calendar-reminder-mvp/src/components/: GoogleCalendarConnectButton.tsx
nl-calendar-reminder-mvp/src/services/: reminderService.ts
nl-calendar-reminder-mvp/src/types/: reminder.ts
scripts/: smoke-health.sh  smoke-local.sh  smoke-preview.sh  smoke-reminders.sh  test-time-parser.js
src/db/: init.js
src/routes/: integrations.js  reminders.js
src/services/: googleCalendar.js  reminderService.js  timeParser.js
video-frame-desktop/: README.md  TESTING.md  build_release.cmd  package-lock.json  package.json
video-frame-desktop/scripts/: ensure_icon.cmd
video-frame-desktop/src/: App.jsx  styles.css
video-frame-desktop/src-tauri/: Cargo.toml  tauri.conf.json
video-frame-desktop/src-tauri/src/: lib.rs
worker/src/: index.ts
worker/src/lib/: timeParser.test.ts  timeParser.ts
