[package]
name = "video-frame-desktop"
version = "0.1.1"
description = "Desktop video frame processor"
authors = ["OpenClaw"]
edition = "2021"

[lib]
name = "video_frame_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
rfd = "0.15"
